fix(atomic): made badges wrap on small screens (#1434)
https://coveord.atlassian.net/browse/KIT-983

--- a/packages/atomic/src/components/atomic-result/atomic-result-cell-desktop.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-cell-desktop.pcss
@@ -34,14 +34,14 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-base);
 
       margin-top: 2.25rem;
-      height: 2.5rem;
+      --row-height: 2.5rem;
     }
 
     atomic-result-section-title {
@@ -99,14 +99,14 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-top: 1.75rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-title {
@@ -164,14 +164,14 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-top: 1.25rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-title {
