--- a/packages/atomic/src/components/atomic-result/atomic-result-row-mobile.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-row-mobile.pcss
@@ -12,12 +12,12 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       margin-top: 1rem;
-      height: 2.5rem;
+      --row-height: 2.5rem;
     }
 
     atomic-result-section-title {
@@ -51,12 +51,12 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       margin-top: 0.75rem;
-      height: 2.5rem;
+      --row-height: 2.5rem;
     }
 
     atomic-result-section-title {
@@ -90,12 +90,12 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --row-height: 2rem;
     }
 
     atomic-result-section-actions {
       margin-top: 0.5em;
-      height: 2.5rem;
+      --row-height: 2.5rem;
     }
 
     atomic-result-section-title {
