--- a/packages/atomic/src/components/atomic-result/atomic-result-with-sections.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-with-sections.pcss
@@ -42,6 +42,14 @@
     color: var(--atomic-neutral-dark);
   }
 
+  atomic-result-section-badges,
+  atomic-result-section-actions {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    max-height: calc(2 * var(--row-height, 2rem) + 0.5rem);
+  }
+
   atomic-result-section-visual,
   atomic-result-section-badges,
   atomic-result-section-actions,
